--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -19,16 +19,16 @@
 01
 </td>
 <td>
-true returned when valid identifier is entered.
+true returned when string is in array
 </td>
 <td>
-LuhnIdentifierValidator.java
+OpenmrsUtil.java
 </td>
 <td>
-isValid()
+isStringinArray()
 </td>
 <td>
-a-3
+"Sam"|["Sam","Wright"]
 </td>
 </td>
 </td>
@@ -48,18 +48,16 @@ style="color:#FF0000;">Failed
 02
 </td>
 <td>
-false returned when invalid identifier is entered.
+true returned when string is in array
 </td>
 <td>
-LuhnIdentifierValidator.java
+OpenmrsUtil.java
 </td>
 <td>
-isValid()
+isStringinArray()
 </td>
 <td>
-a-4
-</td>
-</td>
+"Dylan"|["Sam","Wright"]
 </td>
 </td>
 <td>
