pushing driver/script progress. just got testcase1 to pass!

--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -37,10 +37,10 @@ isStringinArray()
 true
 </td>
 <td>
-
+true
 </td>
 <td
-style="color:#FF0000;">Failed
+style="color:#0D7010;">Passed
 </td>
 </tr>
 <tr>
@@ -64,7 +64,7 @@ isStringinArray()
 false
 </td>
 <td>
-
+true
 </td>
 <td
 style="color:#FF0000;">Failed
@@ -93,7 +93,7 @@ Sam
 UnallowedIdentifierException thrown.
 </td>
 <td>
-
+true
 </td>
 <td
 style="color:#FF0000;">Failed
@@ -122,7 +122,7 @@ a
 3
 </td>
 <td>
-
+true
 </td>
 <td
 style="color:#FF0000;">Failed
@@ -151,7 +151,7 @@ b
 1
 </td>
 <td>
-
+true
 </td>
 <td
 style="color:#FF0000;">Failed
