--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -83,7 +83,7 @@ OpenmrsUtil.java
 isStringinArray(String str
 </td>
 <td>
-&"Sam","Wright"
+""&"Sam","Wright"
 </td>
 </td>
 </td>
@@ -111,8 +111,7 @@ OpenmrsUtil.java
 containsDigit(String test)
 </td>
 <td>
-"Sam1"
-</td>
+1
 </td>
 </td>
 <td>
@@ -139,7 +138,7 @@ OpenmrsUtil.java
 containsDigit(String test)
 </td>
 <td>
-"Sam"
+Sam
 </td>
 </td>
 </td>
