--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -327,3 +327,31 @@ false
 style="color:#0D7010;">Passed
 </td>
 </tr>
+<tr>
+<td>
+12
+</td>
+<td>
+false is returned when string is null
+</td>
+<td>
+OpenmrsUtil.java
+</td>
+<td>
+containsUpperAndLowerCase(String test)
+</td>
+<td>
+""
+</td>
+</td>
+</td>
+<td>
+false
+</td>
+<td>
+false
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
