adding test case 13 and 14

--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -355,3 +355,57 @@ false
 style="color:#0D7010;">Passed
 </td>
 </tr>
+<tr>
+<td>
+13
+</td>
+<td>
+Take inputted date, location, and format type and outputs the formatted date
+</td>
+<td>
+Format.java
+</td>
+<td>
+format(Date date
+</td>
+<td>
+5/13/1998,US,DATE
+</td>
+</td>
+<td>
+5/13/98
+</td>
+<td>
+5/13/98
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
+<tr>
+<td>
+14
+</td>
+<td>
+Take inputted date, location, and format type and outputs the formatted date
+</td>
+<td>
+Format.java
+</td>
+<td>
+format(Date date
+</td>
+<td>
+5/13/1998,JAPAN,DATE
+</td>
+</td>
+<td>
+98/05/13
+</td>
+<td>
+98/05/13
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
