--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -387,7 +387,7 @@ style="color:#0D7010;">Passed
 14
 </td>
 <td>
-Take inputted date, location, and format type and outputs the formatted date
+Take inputted date, location, and format_type:DATE and outputs the formatted date
 </td>
 <td>
 Format.java
@@ -404,6 +404,60 @@ format(Date date
 </td>
 <td>
 98/05/13
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
+<tr>
+<td>
+15
+</td>
+<td>
+Take inputted date, location, and format_type:TIME and outputs the formatted date
+</td>
+<td>
+Format.java
+</td>
+<td>
+format(Date date
+</td>
+<td>
+5/13/1998/14:30,US,TIME
+</td>
+</td>
+<td>
+2:30:00 PM
+</td>
+<td>
+2:30:00 PM
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
+<tr>
+<td>
+16
+</td>
+<td>
+Take inputted date, location, and format_type:TIME and outputs the formatted date
+</td>
+<td>
+Format.java
+</td>
+<td>
+format(Date date
+</td>
+<td>
+5/13/1998/14:30,JAPAN,TIME
+</td>
+</td>
+<td>
+14:30:00
+</td>
+<td>
+14:30:00
 </td>
 <td
 style="color:#0D7010;">Passed
