--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -32,15 +32,6 @@ isStringinArray(String str
 </td>
 </td>
 </td>
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
 <td>
 true
 </td>
@@ -535,10 +526,10 @@ format(Date date
 </td>
 </td>
 <td>
-
+null
 </td>
 <td>
-
+null
 </td>
 <td
 style="color:#0D7010;">Passed
@@ -562,10 +553,91 @@ format(Date date
 </td>
 </td>
 <td>
-
+null
 </td>
 <td>
-
+null
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
+<tr>
+<td>
+21
+</td>
+<td>
+returns true if strings are equal
+</td>
+<td>
+OpenmrsUtil.java
+</td>
+<td>
+nullSafeEqualsIgnoreCase(String s1
+</td>
+<td>
+"Sam","Sam"
+</td>
+</td>
+<td>
+true
+</td>
+<td>
+true
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
+<tr>
+<td>
+22
+</td>
+<td>
+returns false if strings are not equal
+</td>
+<td>
+OpenmrsUtil.java
+</td>
+<td>
+nullSafeEqualsIgnoreCase(String s1
+</td>
+<td>
+"Sam","Wright"
+</td>
+</td>
+<td>
+false
+</td>
+<td>
+false
+</td>
+<td
+style="color:#0D7010;">Passed
+</td>
+</tr>
+<tr>
+<td>
+23
+</td>
+<td>
+returns false if one of the strings are null
+</td>
+<td>
+OpenmrsUtil.java
+</td>
+<td>
+nullSafeEqualsIgnoreCase(String s1
+</td>
+<td>
+"Sam",""
+</td>
+</td>
+<td>
+false
+</td>
+<td>
+false
 </td>
 <td
 style="color:#0D7010;">Passed
