a bunch of stuff

--- a/TestAutomation/reports/testReport.html
+++ b/TestAutomation/reports/testReport.html
@@ -16,7 +16,7 @@
 <th> pass/fail </th></tr>
 <tr>
 <td>
-01
+001
 </td>
 <td>
 true returned when string is in array
@@ -29,15 +29,6 @@ isStringinArray(String str
 </td>
 <td>
 "Sam"&"Sam","Wright"
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
-</td>
 </td>
 </td>
 </td>
@@ -535,10 +526,10 @@ format(Date date
 </td>
 </td>
 <td>
-
+//emptyString
 </td>
 <td>
-
+//emptyString
 </td>
 <td
 style="color:#0D7010;">Passed
@@ -569,5 +560,32 @@ format(Date date
 </td>
 <td
 style="color:#0D7010;">Passed
+</td>
+</tr>
+<tr>
+<td>
+021
+</td>
+<td>
+returns the duration in days
+</td>
+<td>
+Duration.java
+</td>
+<td>
+getDurationInDays(Duration duration
+</td>
+<td>
+55.0 months
+</td>
+</td>
+<td>
+1650.0
+</td>
+<td>
+
+</td>
+<td
+style="color:#FF0000;">Failed
 </td>
 </tr>
